# CSE6230-Final-Project

./: .gitmodules  CMakeLists.txt  README.md  build.config
include/: consts.h  cpu_utils.h  dataset.h  device_utils.h  io.h  kernel_wrappers.h  kernels.h  kmeans_cuda.h  kmeans_openmp.h
main/: CMakeLists.txt  main.cpp
scripts/: visualize.py
src/: CMakeLists.txt  cpu_utils.cpp  dataset.cpp  device_utils.cu  io.cpp  kernel_wrappers.cu  kernels.cu  kmeans.cu  kmeans_cuda.cpp  kmeans_cuda.cu  kmeans_openmp.cpp
tests/: CMakeLists.txt  test_assignment.cpp  test_fused.cpp  test_update.cpp
